--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.4'
-        
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -24,4 +23,17 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    picassoVersion = '2.5.0'
+    supportVersion = '27.1.1'
+    espressoVersion = '3.0.2'
+    junitVersion = '4.12'
+    constraintLayoutVersion = '1.1.2'
+    runnerVersion = '1.0.2'
+    butterKnifeVersion = '8.8.1'
+    retrofit2Version = '2.4.0'
+    gsonVersion = '2.8.5'
+    okHttpVersion = '3.11.0'
 }
