start adding room : Creation Movie Entity and Movie Dao

--- a/build.gradle
+++ b/build.gradle
@@ -38,4 +38,6 @@ ext {
     okHttpVersion = '3.11.0'
     rxJavaVersion = '2.1.1'
     rxAndroidVersion = '2.0.1'
+    lifecycleVersion = '1.1.1'
+    roomVersion = '1.1.1'
 }
