--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,22 +27,38 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    // Android dependencies
     implementation "com.android.support:appcompat-v7:$rootProject.ext.supportVersion"
     implementation "com.android.support:recyclerview-v7:$rootProject.ext.supportVersion"
+    implementation "com.android.support:cardview-v7:$rootProject.ext.supportVersion"
     implementation "com.android.support.constraint:constraint-layout:$rootProject.ext.constraintLayoutVersion"
+    // Picasso dependencies
     implementation "com.squareup.picasso:picasso:$rootProject.ext.picassoVersion"
-    implementation "com.jakewharton:butterknife:$rootProject.ext.butterKnifeVersion"
+    // Retrofit dependencies
     implementation "com.squareup.retrofit2:retrofit:$rootProject.ext.retrofit2Version"
     implementation "com.squareup.retrofit2:converter-gson:$rootProject.ext.retrofit2Version"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$rootProject.ext.retrofit2Version"
+    // OkHttp dependencies
     implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.ext.okHttpVersion"
     implementation "com.squareup.okhttp3:okhttp:$rootProject.ext.okHttpVersion"
+    // Gson dependencies
     implementation "com.google.code.gson:gson:$rootProject.ext.gsonVersion"
+    // Rxjava & RxAndroid dependencies
     implementation "io.reactivex.rxjava2:rxjava:$rootProject.ext.rxJavaVersion"
     implementation "io.reactivex.rxjava2:rxandroid:$rootProject.ext.rxAndroidVersion"
+    // Lifecycle dependencies
+    implementation "android.arch.lifecycle:extensions:$rootProject.ext.lifecycleVersion"
+    implementation "android.arch.lifecycle:common-java8:$rootProject.ext.lifecycleVersion"
+    // Room dependencies
+    implementation "android.arch.persistence.room:runtime:$rootProject.ext.roomVersion"
+    annotationProcessor "android.arch.persistence.room:compiler:$rootProject.ext.roomVersion"
+    implementation "android.arch.persistence.room:rxjava2:$rootProject.ext.roomVersion"
+    // Butterknife dependencies
+    implementation "com.jakewharton:butterknife:$rootProject.ext.butterKnifeVersion"
     annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.ext.butterKnifeVersion"
+    // Test dependencies
     testImplementation "junit:junit:$rootProject.ext.junitVersion"
     androidTestImplementation "com.android.support.test:runner:$rootProject.ext.runnerVersion"
     androidTestImplementation "com.android.support.test.espresso:espresso-core:$rootProject.ext.espressoVersion"
-    implementation 'com.android.support:cardview-v7:27.1.1'
+
 }
