--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.legue.axel.myfavoritesmovies"
         minSdkVersion 24
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
-
     }
 
     compileOptions {
@@ -18,9 +17,15 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     buildTypes {
+        debug {
+//            buildConfigField ('String', "ApiKey", "c84a53cfcf0110ef15678006695e3b38")
+            resValue ('string', "API_KEY", "c84a53cfcf0110ef15678006695e3b38")
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//            buildConfigField ('String', "ApiKey", "c84a53cfcf0110ef15678006695e3b38")
+            resValue ('string', "API_KEY", "c84a53cfcf0110ef15678006695e3b38")
         }
     }
 }
